--- a/urdf/TorquePoleLong/package.xml
+++ b/urdf/TorquePoleLong/package.xml
@@ -1,10 +1,10 @@
 <package format="2">
-  <name>Leg</name>
+  <name>TorquePoleLong</name>
   <version>1.0.0</version>
   <description>
-    <p>URDF Description package for Leg</p>
+    <p>URDF Description package for TorquePoleLong</p>
     <p>This package contains configuration data, 3D models and launch files
-for Leg robot</p>
+for TorquePoleLong robot</p>
   </description>
   <author>TODO</author>
   <maintainer email="TODO@email.com" />
