--- a/isaac/IsaacGymEnvs/isaacgymenvs/cfg/task/TorquePole.yaml
+++ b/isaac/IsaacGymEnvs/isaacgymenvs/cfg/task/TorquePole.yaml
@@ -44,3 +44,31 @@ sim:
 
 task:
   randomize: False
+  randomization_params:
+    frequency: 10   # Define how many environment steps between generating new randomizations
+    # observations:
+    #   range: [0, .002] # range for the white noise
+    #   operation: "additive"
+    #   distribution: "gaussian"
+    # actions:
+    #   range: [0., .02]
+    #   operation: "additive"
+    #   distribution: "gaussian"
+    # sim_params: 
+    #   gravity:
+    #     range: [0, 0.4]
+    #     operation: "additive"
+    #     distribution: "gaussian"
+    #     schedule: "linear"  # "linear" will linearly interpolate between no rand and max rand
+    #     schedule_steps: 3000
+    actor_params:
+      torquepole:
+        # color: False
+        dof_properties:
+          friction: 
+            range: [0.0, 1.0]
+            operation: "scaling"
+            distribution: "uniform"
+            schedule: "linear"  # "linear" will scale the current random sample by `min(current num steps, schedule_steps) / schedule_steps`
+            schedule_steps: 500
+          
