--- a/OmniIsaacGymEnvs/omniisaacgymenvs/cfg/task/Guarddog.yaml
+++ b/OmniIsaacGymEnvs/omniisaacgymenvs/cfg/task/Guarddog.yaml
@@ -3,19 +3,68 @@ name: Guarddog
 
 physics_engine: ${..physics_engine}
 
-# if given, will override the device setting in gym. 
 env:
-  numEnvs: ${resolve_default:512,${...num_envs}}
-  envSpacing: 4.0
-  resetDist: 3.0
-  maxEffort: 400.0
+  numEnvs: ${resolve_default:4096,${...num_envs}}
+  envSpacing: 4.  # [m]
 
   clipObservations: 5.0
   clipActions: 1.0
-  controlFrequencyInv: 2 # 60 Hz
+
+  controlFrequencyInv: 2
+
+  baseInitState:
+    pos: [0.0, 0.0, 0.62] # x,y,z [m]
+    rot: [0.0, 0.0, 0.0, 1.0] # x,y,z,w [quat]
+    vLinear: [0.0, 0.0, 0.0]  # x,y,z [m/s]
+    vAngular: [0.0, 0.0, 0.0]  # x,y,z [rad/s]
+
+  randomCommandVelocityRanges:
+    linear_x: [-2., 2.] # min max [m/s]
+    linear_y: [-1., 1.]   # min max [m/s]
+    yaw: [-1., 1.]          # min max [rad/s]
+
+  control:
+    # PD Drive parameters:
+    stiffness: 85.0  # [N*m/rad]
+    damping: 2.0     # [N*m*s/rad]
+    actionScale: 13.5
+
+  defaultJointAngles:  # = target angles when action = 0.0
+    FR_J1: 0.0    # [rad]
+    FL_J1: 0.0    # [rad]
+    BR_J1: 0.0   # [rad]
+    BL_J1: 0.0   # [rad]
+
+    FR_J2: 0.5     # [rad]
+    FL_J2: -0.5    # [rad]
+    BR_J2: -0.5     # [rad]
+    BL_J2: 0.5    # [rad]
+
+    FR_J3: -2.0    # [rad]
+    FL_J3: 2.0     # [rad]
+    BR_J3: 2.0    # [rad]
+    BL_J3: -2.0     # [rad]
+
+  learn:
+    # rewards
+    linearVelocityXYRewardScale: 1.0
+    angularVelocityZRewardScale: 0.5
+    linearVelocityZRewardScale: -0.03
+    jointAccRewardScale: -0.0003
+    actionRateRewardScale: -0.006
+    cosmeticRewardScale: -0.06
+
+    # normalization
+    linearVelocityScale: 2.0
+    angularVelocityScale: 0.25
+    dofPositionScale: 1.0
+    dofVelocityScale: 0.05
+
+    # episode length in seconds
+    episodeLength_s: 50
 
 sim:
-  dt: 0.0083 # 1/120 s
+  dt: 0.01
   use_gpu_pipeline: ${eq:${...pipeline},"gpu"}
   gravity: [0.0, 0.0, -9.81]
   add_ground_plane: True
@@ -37,9 +86,9 @@ sim:
     solver_type: ${....solver_type}
     use_gpu: ${eq:${....sim_device},"gpu"} # set to False to run on CPU
     solver_position_iteration_count: 4
-    solver_velocity_iteration_count: 0
+    solver_velocity_iteration_count: 1
     contact_offset: 0.02
-    rest_offset: 0.001
+    rest_offset: 0.0
     bounce_threshold_velocity: 0.2
     friction_offset_threshold: 0.04
     friction_correlation_distance: 0.025
@@ -49,14 +98,14 @@ sim:
 
     # GPU buffers
     gpu_max_rigid_contact_count: 524288
-    gpu_max_rigid_patch_count: 81920
-    gpu_found_lost_pairs_capacity: 1024
-    gpu_found_lost_aggregate_pairs_capacity: 262144
-    gpu_total_aggregate_pairs_capacity: 1024
+    gpu_max_rigid_patch_count: 163840
+    gpu_found_lost_pairs_capacity: 4194304
+    gpu_found_lost_aggregate_pairs_capacity: 33554432
+    gpu_total_aggregate_pairs_capacity: 4194304
     gpu_max_soft_body_contacts: 1048576
     gpu_max_particle_contacts: 1048576
-    gpu_heap_capacity: 67108864
-    gpu_temp_buffer_capacity: 16777216
+    gpu_heap_capacity: 134217728
+    gpu_temp_buffer_capacity: 33554432
     gpu_max_num_partitions: 8
 
   Guarddog:
@@ -67,12 +116,10 @@ sim:
     # also in stage params
     # per-actor
     solver_position_iteration_count: 4
-    solver_velocity_iteration_count: 0
+    solver_velocity_iteration_count: 1
     sleep_threshold: 0.005
     stabilization_threshold: 0.001
     # per-body
     density: -1
     max_depenetration_velocity: 100.0
-    # per-shape
-    contact_offset: 0.02
-    rest_offset: 0.001
+
