--- a/OmniIsaacGymEnvs/omniisaacgymenvs/cfg/train/GuarddogPPO.yaml
+++ b/OmniIsaacGymEnvs/omniisaacgymenvs/cfg/train/GuarddogPPO.yaml
@@ -10,21 +10,23 @@ params:
   network:
     name: actor_critic
     separate: False
+
     space:
       continuous:
         mu_activation: None
         sigma_activation: None
-
         mu_init:
           name: default
         sigma_init:
           name: const_initializer
-          val: 0
+          val: 0. # std = 1.
         fixed_sigma: True
+
     mlp:
-      units: [32, 32]
+      units: [256, 128, 64]
       activation: elu
-      
+      d2rl: False
+
       initializer:
         name: default
       regularizer:
@@ -41,30 +43,33 @@ params:
     env_name: rlgpu
     multi_gpu: ${....multi_gpu}
     ppo: True
-    mixed_precision: False
+    mixed_precision: True
     normalize_input: True
     normalize_value: True
+    value_bootstrap: True
     num_actors: ${....task.env.numEnvs}
     reward_shaper:
-      scale_value: 0.1
+      scale_value: 1.0
     normalize_advantage: True
     gamma: 0.99
     tau: 0.95
-    learning_rate: 3e-4
-    lr_schedule: adaptive
-    kl_threshold: 0.008
-    score_to_win: 20000
-    max_epochs: ${resolve_default:100,${....max_iterations}}
-    save_best_after: 50
-    save_frequency: 25
-    grad_norm: 1.0
-    entropy_coef: 0.0
-    truncate_grads: True
     e_clip: 0.2
-    horizon_length: 16
-    minibatch_size: 8192
-    mini_epochs: 8
-    critic_coef: 4
+    entropy_coef: 0.0
+    learning_rate: 3.e-4 # overwritten by adaptive lr_schedule
+    lr_schedule: adaptive
+    kl_threshold: 0.008 # target kl for adaptive lr
+    truncate_grads: True
+    grad_norm: 1.
+    horizon_length: 24
+    minibatch_size: 32768
+    mini_epochs: 5
+    critic_coef: 2
     clip_value: True
-    seq_length: 4
-    bounds_loss_coef: 0.0001
+    seq_length: 4 # only for rnn
+    bounds_loss_coef: 0.001
+
+    max_epochs: ${resolve_default:1000,${....max_iterations}}
+    save_best_after: 200
+    score_to_win: 20000
+    save_frequency: 50
+    print_stats: True
