--- a/urdf/Biped/config/joint_names_Biped.yaml
+++ b/urdf/Biped/config/joint_names_Biped.yaml
@@ -1,1 +1,1 @@
-controller_joint_names: ['', 'FR_J1', 'FR_J2', 'FR_J3', 'FL_J2', 'FL_J3', 'WheelX', 'WheelY', ]
+controller_joint_names: ['', 'L_J1', 'L_J2', 'L_J3', 'R_J1', 'R_J2', 'R_J3', 'WheelX', 'WheelY', ]
